<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Cube</string>
    <string name="conversation">消息</string>
    <string name="files">文件</string>
    <string name="contacts">联系人</string>
    <string name="profile">我的</string>
    <string name="add_contact">添加联系人</string>
    <string name="new_dir">新建文件夹</string>
    <string name="upload_file">上传文件</string>
    <string name="search">搜索</string>
    <string name="complete">完成</string>
    <string name="complete_with_count">完成(%1$d)</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="send">发送</string>
    <string name="i_see">我知道了</string>
    <string name="close">关闭</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="nickname">名称</string>
    <string name="nickname_hint">例如：来自平行宇宙的我</string>
    <string name="password">密码</string>
    <string name="verification_code">验证码</string>
    <string name="enter_phone_number">请填写手机号码</string>
    <string name="enter_password">请填写密码</string>
    <string name="enter_verification_code">请填写验证码</string>
    <string name="see_password">显示密码</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="china">中国</string>
    <string name="china_region_number">+86</string>
    <string name="login_by_account">使用账号登录</string>
    <string name="login_by_phone">使用手机号码登录</string>
    <string name="account">账号</string>
    <string name="enter_account_name">请填写账号名</string>
    <string name="title_register">注册账号</string>
    <string name="nickname_length_error">名称至少输入3个字符</string>
    <string name="password_length_error">密码至少6个字符</string>
    <string name="phone_not_empty">手机号码不能为空</string>
    <string name="phone_format_error">手机号码格式不正确</string>
    <string name="phone_not_available">手机号码不可用</string>
    <string name="vcode_not_empty">验证码不能为空</string>
    <string name="register_failed_with_code">注册账号出错：%1$d</string>
    <string name="title_login">登录</string>
    <string name="countries_and_regions">国家/地区</string>
    <string name="login_error">请确认您的手机号码和密码后再尝试登录</string>
    <string name="please_to_talk">按住 说话</string>
    <string name="retry">重试</string>
    <string name="message_read">已读</string>
    <string name="message_unread">未读</string>
    <string name="no_support_message">不支持的消息类型</string>
    <string name="loading_messages">正在加载</string>
    <string name="can_not_get_camera_permission">没有获得摄像机使用授权</string>
    <string name="fun_album">相册</string>
    <string name="fun_shot">拍摄</string>
    <string name="fun_file">文件</string>
    <string name="fun_voice_comm">语音通话</string>
    <string name="fun_video_comm">视频通话</string>
    <string name="no_support_file_type">不支持的文件类型</string>
    <string name="tip_new_contact_first">您已添加了%1$s，现在可以开始聊天了。</string>
    <string name="tip_you_can_chat_in_this_group">您现在可以开始在群组“%1$s”里聊天了。</string>
    <string name="tip_conversation_invalid">当前会话已失效</string>
    <string name="tip_message_retracted">消息已撤回</string>
    <string name="tip_message_deleted">消息已删除</string>
    <string name="tip_message_retract_failed_timeout">消息已发出超过2分钟，无法撤回</string>
    <string name="tip_message_retract_failed">消息撤回失败</string>
    <string name="tip_message_delete_failed">消息删除失败</string>
    <string name="tip_burn_enabled">进入"阅后即焚"模式</string>
    <string name="tip_burn_disabled">退出"阅后即焚"模式</string>
    <string name="message_burned">消息已焚毁</string>
    <string name="message_copied">消息内容已复制到剪贴板</string>
    <string name="menu_copy">复制</string>
    <string name="menu_forward">转发</string>
    <string name="menu_retract">撤回</string>
    <string name="menu_retract_both">双向撤回</string>
    <string name="menu_delete">删除</string>
    <string name="release_to_send">松开 发送</string>
    <string name="release_to_cancel">松开 取消</string>
    <string name="tip_recording_no_permission">无录音权限</string>
    <string name="tip_recording_permission_granted">已获得录音权限</string>
    <string name="tip_recording_time_too_short">录音时间太短</string>
    <string name="tip_recording_time_too_long">最长录音60秒，剩余10秒</string>
    <string name="tip_recording_timeout">录音超时</string>
    <string name="tip_load_message_failed">加载消息数据出错</string>
    <string name="send_to">发送给：</string>
    <string name="leave_a_message_for_a_friend">给朋友留言</string>
    <string name="tip_forward_failed">转发消息出错</string>
    <string name="tip_forward_success">消息已转发</string>
    <string name="new_contact">新的联系人</string>
    <string name="group">群组</string>
    <string name="tag">标签</string>
    <string name="conference">会议</string>
    <string name="count_of_contacts">%1$d位联系人</string>
    <string name="no_group_now">暂无群组</string>
    <string name="all_files">全部</string>
    <string name="file_image">图片</string>
    <string name="file_doc">文档</string>
    <string name="file_video">视频</string>
    <string name="file_audio">音频</string>
    <string name="file_trash">回收站</string>
    <string name="tip_recyclebin_trash_num">回收站 (%1$d)</string>
    <string name="file_transmitting">正在传输</string>
    <string name="file_uploading">正在上传</string>
    <string name="file_downloading">正在下载</string>
    <string name="file_new_dir">新建文件夹</string>
    <string name="please_enter_folder_name">请输入文件夹名称：</string>
    <string name="file_rename_dir">重命名文件夹</string>
    <string name="file_delete_dir">删除文件夹</string>
    <string name="file_delete">删除文件</string>
    <string name="file_move">移动文件</string>
    <string name="file_download">下载文件</string>
    <string name="file_erase_trash">立即删除</string>
    <string name="file_restore_trash">放回原处</string>
    <string name="file_sharing">分享文件</string>
    <string name="file_share_to">分享文件到</string>
    <string name="file_share_to_contact">联系人</string>
    <string name="file_share_to_hyperlink">超链接</string>
    <string name="file_share_to_wechat">微信</string>
    <string name="file_share_to_qq">QQ</string>
    <string name="file_share_to_other">其他</string>
    <string name="tip_delete_directory">您确认要删除文件夹 %1$s 吗？如果确认删除将同时删除文件夹下的所有文件！</string>
    <string name="tip_delete_file">您确认要删除文件 %1$s 吗？</string>
    <string name="tip_can_not_find_files">没有找到文件</string>
    <string name="tip_file_share_failed_format">文件分享失败: %1$d</string>
    <string name="tip_file_sharing_url_copy_to_clipboard">文件分享链接已复制到系统剪贴板</string>
    <string name="my_nickname">我的名称</string>
    <string name="cube_id_colon">魔方号：%1$s</string>
    <string name="my_cube_id">我的魔方号：</string>
    <string name="setting">设置</string>
    <string name="title_profile_info">个人信息</string>
    <string name="avatar">头像</string>
    <string name="cube_id">魔方号</string>
    <string name="select_avatar">选择头像</string>
    <string name="modify_name">修改名称</string>
    <string name="box">魔方讯盒</string>
    <string name="help">帮助</string>
    <string name="nickname_colon">昵称：%1$s</string>
    <string name="remark_and_tag">备注和标签</string>
    <string name="signature">个性签名</string>
    <string name="postscript">附言</string>
    <string name="send_message">发消息</string>
    <string name="add_to_contacts">添加到联系人</string>
    <string name="delete_from_contacts">删除联系人</string>
    <string name="delete_contact_content">将联系人%1$s删除，将同时删除与该联系人的聊天记录</string>
    <string name="save_to_phone">保存到手机</string>
    <string name="add_to_block_list">添加到黑名单</string>
    <string name="send_contact_card">发送联系人名片</string>
    <string name="not_find_contact">该用户不存在</string>
    <string name="search_condition_error">请输入正确的搜索内容</string>
    <string name="not_allow_add_to_contacts">对方不允许添加联系人</string>
    <string name="remark_name">备注名</string>
    <string name="set_remark_and_tag">设置备注和标签</string>
    <string name="member_role">成员角色</string>
    <string name="member_role_admin">管理员</string>
    <string name="member_role_member">成员</string>
    <string name="disable_messaging">禁言</string>
    <string name="group_name">群组名称</string>
    <string name="group_notice">群组公告</string>
    <string name="save_to_contacts">保存到我的群组</string>
    <string name="my_nickname_in_this_group">我在本群的昵称</string>
    <string name="display_member_name">显示群成员昵称</string>
    <string name="delete_and_quit">删除并退出</string>
    <string name="create_group">创建群聊</string>
    <string name="create_group_success">创建群聊成功</string>
    <string name="create_group_failure">创建群聊失败，请稍候再试</string>
    <string name="are_you_sure_to_dismiss_this_group">你确定要解散该群吗?</string>
    <string name="you_will_never_receive_any_message_after_quit">删除并退出后，将不再接收此群聊信息</string>
    <string name="quit_group_fail">退出群聊失败</string>
    <string name="modify_group_name">修改群聊名称</string>
    <string name="modify_group_name_tip_notify_all">修改群聊名称后，将在群内通知其他成员。</string>
    <string name="change_group_name">已修改群聊名称</string>
    <string name="no_group_notice">未设置群公告，只有群主才能设置公告</string>
    <string name="modify_group_notice">群公告</string>
    <string name="modify_group_notice_failure">修改群公告失败，请稍候再试</string>
    <string name="select_contact">选择联系人</string>
    <string name="remove_member">删除成员</string>
    <string name="select_member">选择群组成员</string>
    <string name="are_you_sure_to_remove_members">你确定要从群组里移除这%1$d个成员吗？</string>
    <string name="draft">[草稿]</string>
    <string name="conv_title">会话详情</string>
    <string name="conv_remind_close">消息免打扰</string>
    <string name="conv_top">置顶聊天</string>
    <string name="conv_delete">删除聊天</string>
    <string name="conv_search_content">查找聊天内容</string>
    <string name="conv_top_confirm">已置顶</string>
    <string name="conv_top_cancel">取消置顶</string>
    <string name="conv_clear_records">清空聊天记录</string>
    <string name="tip_conv_deleted">聊天已删除</string>
    <string name="title_select_one_conversation">选择一个聊天</string>
    <string name="title_select_multiple_conversations">选择多个聊天</string>
    <string name="apply_overlay_permission">音视频通话界面需要您授权悬浮窗权限</string>
    <string name="auth_overlay_permission_failure">授权悬浮窗权限失败</string>
    <string name="apply_camera_permission">音视频通话需求您授权摄像机和麦克风权限</string>
    <string name="postscript_tip">您需要发送验证申请，等待对方通过</string>
    <string name="not_allow_to_read_my_share_box">不让他(她)看我的分享盒子</string>
    <string name="request_sent_success">请求已发送</string>
    <string name="request_sent_failure">请求发送失败</string>
    <string name="no_recommend_contact">还没有推荐的联系人</string>
    <string name="you_are_the_invitee">对方请求添加你为联系人</string>
    <string name="expired">已过期</string>
    <string name="waiting_for_validation">等待验证</string>
    <string name="show_new_contact_details">查看</string>
    <string name="dark_theme">深色模式</string>
    <string name="follow_system">跟随系统</string>
    <string name="dark_theme_enable">已启用</string>
    <string name="dark_theme_disable">未启用</string>
    <string name="manual_selection">手动选择</string>
    <string name="light_theme">普通模式</string>
    <string name="about_cube">关于魔方云信</string>
    <string name="app_name_in_about">魔方云信 %1$s</string>
    <string name="check_version">检查更新</string>
    <string name="goto_website">访问官网 shixincube.com</string>
    <string name="logout">退出登录</string>
    <string name="deregister">注销并删除账号</string>
    <string name="do_you_want_to_logout">您是否确认要退出当前账号在该设备上的登录状态。</string>
    <string name="tip_checking_version">检查新版本</string>
    <string name="tip_check_version_failed">检查新版本出错，请稍候重试</string>
    <string name="ferry_title">魔方讯盒</string>
    <string name="ferry_entering">正在加入魔方讯盒……</string>
    <string name="ferry_explain_title">您需要加入魔方讯盒的通讯域才能使用相关功能。</string>
    <string name="ferry_explain_p1">您可以通过以下方式获得魔方讯盒服务器：</string>
    <string name="ferry_explain_p2">1、访问魔方讯盒官方网站，从官方商场购买魔方讯盒服务器，官网地址： box.shixincube.com</string>
    <string name="ferry_explain_p3">2、通过电子邮箱 cube@spap.com 联系官方客服。</string>
    <string name="ferry_explain_p4">3、扫描好友分享的魔方讯盒邀请二维码或者输入邀请码。</string>
    <string name="ferry_btn_scan">扫码加入通讯域</string>
    <string name="ferry_btn_input">输入邀请码</string>
    <string name="ferry_btn_logout">退出登录</string>
</resources>