<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorThemeBackground"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorBackground"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!-- 昵称 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="20dp">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:text="@string/nickname"
                        android:textColor="?attr/colorText"
                        android:textSize="16sp"/>

                    <EditText
                        android:id="@+id/etNickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/nickname_hint"
                        android:inputType="text"
                        android:autofillHints=""
                        android:textColor="?attr/colorText"
                        android:textColorHint="@color/hint"
                        android:textSize="16sp"
                        android:textCursorDrawable="@drawable/cursor"/>

                </LinearLayout>

                <View
                    android:id="@+id/vLineNickname"
                    style="?attr/styleLine"/>

            </LinearLayout>

        </LinearLayout>

        <!-- 国家/地区 -->
        <LinearLayout
            android:id="@+id/llDistrict"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/countries_and_regions"
                android:textColor="?attr/colorText"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvDistrict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:text="@string/china"
                android:textColor="?attr/colorTextSecondary"
                android:textSize="16sp"/>

        </LinearLayout>

        <View style="?attr/styleLine"/>

        <!-- 电话号码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="20dp">

            <TextView
                android:id="@+id/tvDistrictNumber"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/china_region_number"
                android:textColor="?attr/colorText"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/enter_phone_number"
                android:inputType="phone"
                android:autofillHints=""
                android:textColor="?attr/colorText"
                android:textColorHint="@color/hint"
                android:textSize="16sp"
                android:textCursorDrawable="@drawable/cursor"/>

        </LinearLayout>

        <View
            android:id="@+id/vLinePhoneNumber"
            style="?attr/styleLine"/>

        <!-- 密码 -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="20dp">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="?attr/colorText"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="38dp"
                    android:background="@null"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/hint"
                    android:textColor="?attr/colorText"
                    android:textSize="16sp"
                    android:autofillHints=""
                    android:textCursorDrawable="@drawable/cursor"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/ivSeePwd"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/see_password"
                android:src="@mipmap/ic_see_pwd"/>

        </RelativeLayout>

        <View
            android:id="@+id/vLinePassword"
            style="?attr/styleLine"/>

        <!-- 验证码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/verification_code"
                android:textColor="?attr/colorText"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etVerificationCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/enter_verification_code"
                android:autofillHints=""
                android:inputType="number"
                android:textColor="?attr/colorText"
                android:textColorHint="@color/hint"
                android:textSize="16sp"
                android:textCursorDrawable="@drawable/cursor"/>

            <Button
                android:id="@+id/btnSendCode"
                android:layout_width="128dp"
                android:layout_height="40dp"
                android:background="@drawable/selector_primary_button"
                android:text="@string/send_verification_code"
                android:textColor="?attr/colorButtonPrimaryText"
                android:textSize="14sp"/>

        </LinearLayout>

        <View
            android:id="@+id/vLineVerificationCode"
            style="?attr/styleLine"/>

        <!-- 注册按钮 -->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_primary_button"
            android:enabled="false"
            android:text="@string/register"
            android:textColor="?attr/colorButtonPrimaryText"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>