<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorThemeBackground"
    android:orientation="vertical">

    <include
        layout="@layout/include_toolbar"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/llJumping"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@mipmap/cube"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:text="@string/ferry_entering"
                android:textAlignment="center"
                android:textColor="?attr/colorText"
                android:textSize="18sp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFerry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/cube"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin_top_and_bottom"
                android:layout_marginBottom="@dimen/item_margin_top_and_bottom"
                android:layout_gravity="center"
                android:text="@string/ferry_title"
                android:textAlignment="center"
                android:textColor="?attr/colorText"
                android:textSize="22sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/ferry_explain_title"
                android:textColor="?attr/colorText"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/ferry_explain_p1"
                android:textColor="?attr/colorText"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/ferry_explain_p2"
                android:textColor="?attr/colorText"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/ferry_explain_p3"
                android:textColor="?attr/colorText"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/ferry_explain_p4"
                android:textColor="?attr/colorText"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnScanQR"
                android:layout_width="match_parent"
                android:layout_height="@dimen/strip_button_height"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_primary_button"
                android:enabled="true"
                android:text="@string/ferry_btn_scan"
                android:textColor="?attr/colorButtonPrimaryText"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/btnInput"
                android:layout_width="match_parent"
                android:layout_height="@dimen/strip_button_height"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_primary_button"
                android:enabled="true"
                android:text="@string/ferry_btn_input"
                android:textColor="?attr/colorButtonPrimaryText"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/strip_button_height"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_primary_button"
                android:enabled="true"
                android:text="@string/ferry_btn_logout"
                android:textColor="?attr/colorButtonPrimaryText"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>