<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorOptionItem"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/item_margin_start_and_end"
        android:paddingEnd="@dimen/item_margin_start_and_end"
        android:orientation="horizontal">

        <com.shixincube.app.widget.AdvancedImageView
            android:id="@+id/ivAvatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/avatar_default"
            auto:corner_radius="4dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="?attr/colorText"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvPostscript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="10dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/you_are_the_invitee"
                android:textColor="?attr/colorTextSecondary"
                android:textSize="12sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvExpired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="end"
            android:singleLine="true"
            android:text="@string/expired"
            android:textColor="@color/text_accent"
            android:textSize="12sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvWaiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="end"
            android:singleLine="true"
            android:text="@string/waiting_for_validation"
            android:textColor="@color/text_accent"
            android:textSize="12sp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnDetails"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/selector_primary_button"
            android:text="@string/show_new_contact_details"
            android:textSize="13sp"
            android:textColor="?attr/colorButtonPrimaryText"/>

    </LinearLayout>

</FrameLayout>